--- a/.editorconfig
+++ b/.editorconfig
@@ -4,13 +4,13 @@ max_line_length = 150
 [*.groovy]
 ij_groovy_class_count_to_use_import_on_demand = 100
 ij_groovy_names_count_to_use_import_on_demand = 100
-ij_groovy_imports_layout = *, javax.**, java.**, |, org.springframework.**, |, lombok.**, |, |, $*, |
+ij_groovy_imports_layout = *, javax.**, java.**, |, org.springframework.**, |, lombok.**, |, rainer.pawel.**, |, |, $*, |
 ij_groovy_label_indent_size = 4
 
 [*.java]
 ij_java_class_count_to_use_import_on_demand = 100
 ij_java_names_count_to_use_import_on_demand = 100
-ij_java_imports_layout = *, javax.**, java.**, |, org.springframework.**, |, lombok.**, |, |, $*, |
+ij_java_imports_layout = *, javax.**, java.**, |, org.springframework.**, |, lombok.**, |, rainer.pawel.**, |, |, $*, |
 ij_java_keep_blank_lines_in_declarations = 1
 ij_java_keep_blank_lines_in_code = 1
 ij_java_keep_blank_lines_before_right_brace = 1
