--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,17 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.codehaus.gmavenplus</groupId>
+                <artifactId>gmavenplus-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>compileTests</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
@@ -117,6 +128,10 @@
                             cucumber.junit-platform.naming-strategy=long
                         </configurationParameters>
                     </properties>
+                    <includes>
+                        <include>**/*Spec.*</include>
+                        <include>**/*TestsRunner.*</include>
+                    </includes>
                 </configuration>
             </plugin>
             <plugin>
@@ -125,7 +140,7 @@
                 <version>1.9.1</version>
                 <executions>
                     <execution>
-                        <id>add-test-source</id>
+                        <id>add-architecture-test-sources</id>
                         <phase>generate-test-sources</phase>
                         <goals>
                             <goal>add-test-source</goal>
@@ -137,7 +152,7 @@
                         </configuration>
                     </execution>
                     <execution>
-                        <id>add-test-source</id>
+                        <id>add-integration-test-source</id>
                         <phase>generate-test-sources</phase>
                         <goals>
                             <goal>add-test-source</goal>
